--- a/locales/de.json
+++ b/locales/de.json
@@ -288,7 +288,7 @@
    "Successfully Deleted Monster Alarm(s)":"Pokémon-Einstellung erfolgreich gelöscht",
    "Successfully Deleted Profile":"Profil erfolgreich gelöscht",
    "Successfully Deleted Quest Alarm(s)":"Quest-Einstellung erfolgreich gelöscht",
-   "Successfully Deleted Raid Alarm(s)":"Raid-Einstellung erfolgreich gelöscht",
+   "Successfully Deleted Raid Alarm":"Raid-Einstellung erfolgreich gelöscht",
    "Successfully Renamed Profile":"Profil erfolgreich umbenannt",
    "Successfully Switched Profile View":"Erfolgreich Profilansicht gewechselt",
    "Successfully Synchronized Channels":"Kanalsynchronisation erfolgreich",
