--- a/locales/de.json
+++ b/locales/de.json
@@ -160,6 +160,8 @@
    "Location":"Standort",
    "LOCATION":"STANDORT",
    "Location Command":"Standort Kommando",
+   "Location deleted successfully":"Standort erfolgreich gelöscht",
+   "Location updated successfully":"Standort erfolgreich aktualisiert",
    "logging into your target telegram account":"Anmeldung beim Telgramkonto",
    "LOGIN WITH DISCORD":"MIT DISCORD ANMELDEN",
    "Logout":"Abmelden",
@@ -272,6 +274,7 @@
    "Street Name":"Straße",
    "Submit":"Speichern",
    "Subscription valid until":"Abo gültig bis",
+   "Successfully Added Gym Alarm(s)":"Arena-Einstellung erfolgreich gespeichert",
    "Successfully Added Invasion Alarm(s)":"Invasions-Einstellung erfolgreich hinzugefügt",
    "Successfully Added Lure Alarm(s)":"Lockmodul-Einstellung erfolgreich hinzugefügt",
    "Successfully Added Monster Alarm(s)":"Pokémon-Einstellung erfolgreich gespeichert",
@@ -283,6 +286,7 @@
    "Successfully Created Profile":"Profil erfolgreich erstellt",
    "Successfully Deleted Egg Alarm":"Ei-Einstellung erfolgreich gelöscht",
    "Successfully Deleted Eggs & Raids Alarm(s)":"Raid- und Ei-Einstellungen erfolgreich gelöscht",
+   "Successfully Deleted Gym Alarm(s)":"Arena-Einstellung erfolgreich gelöscht",
    "Successfully Deleted Invasion Alarm(s)":"Invasions-Einstellung erfolgreich gelöscht",
    "Successfully Deleted Lure Alarm(s)":"Lockmodul-Einstellung erfolgreich gelöscht",
    "Successfully Deleted Monster Alarm(s)":"Pokémon-Einstellung erfolgreich gelöscht",
@@ -299,6 +303,7 @@
    "Successfully Updated Distance on ALL Quests":"Distanzeinstellungen für alle Quests gespeichert",
    "Successfully Updated Distance on ALL Raids & Eggs":"Distanzeinstellungen für alle Raids & Eier gespeichert",
    "Successfully Updated Egg Alarm":"Ei-Einstellung erfolgreich aktualisiert",
+   "Successfully Updated Gym Alarm":"Arena-Einstellung erfolgreich aktualisiert",
    "Successfully Updated Invasion Alarm":"Invasions-Einstellung erfolgreich aktualisiert",
    "Successfully Updated List of Areas":"Gebiete erfolgreich aktualisiert",
    "Successfully Updated Lure Alarm":"Lockmodul-Einstellung erfolgreich aktualisiert",
