--- a/locales/de.json
+++ b/locales/de.json
@@ -211,7 +211,7 @@
    "Other":"weiteres",
    "Password":"Passwort",
    "Please check your settings and Save to migrate to DB":"Bitte überprüfen Sie Ihre Einstellungen und speichern Sie, um zur DB zu migrieren",
-   "Please Name default Profile":"Bit benenne dein Standardprofil",
+   "Please Name default Profile":"Bitte benenne dein Standardprofil",
    "Please Register in Discord using":"Bitte registriere dich in Discord mit",
    "Please select channels you want to synchronize with current channel":"Bitte wähle die Kanäle aus, die du mit dem aktuellen Kanal synchronisieren möchtest",
    "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
