--- a/locales/de.json
+++ b/locales/de.json
@@ -392,6 +392,7 @@
    "Your alarms are currently disabled!":"Deine Nachrichten sind aktuell deaktiviert",
    "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
    "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt. </br>Distanzen werden nicht berücksichtigt!</br>",
+   "Your Location is not set yet!":"Dein Standort ist nicht gesetzt!",
    "Your Location is set to":"Dein Standort:",
    "Your subscription is still valid until":"Dein Abo ist noch gültig bis"
 }
