--- a/locales/de.json
+++ b/locales/de.json
@@ -147,7 +147,7 @@
    "INVASIONS TRACKED":"INVASIONS-EINSTELLUNGEN",
    "INVASIONS":"INVASIONEN",
    "Invasions":"Invasionen",
-   "It can be set hereunder":"Es kann hierunter eingestellt werden",
+   "It can be set hereunder":"Er kann hierunter eingestellt werden:",
    "It looks like you do not have a valid subscription to this tool yet":"Du hast anscheinend noch kein gültiges Abo für dieses Tool",
    "It looks like your subscription has expired on":"Dein Abo ist anscheinend abgelaufen",
    "IV":"IV",
