WIP: Add Locales

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -413,6 +413,7 @@
     "Please Update PoracleJS":"Veuillez mettre PoracleJS à jour",
     "Current PoracleJS Version":"Version PoracleJS Actuelle",
     "Both Areas & Locations are Disabled":"Les zones ET la localisation sont désactivées",
-    "You won't be able to set any working alarms":"Aucune alarme ne fonctionnera!"
+    "You won't be able to set any working alarms":"Aucune alarme ne fonctionnera!",
+    "Enable Templates":"Activer les Templates"
 
 }
