--- a/locales/de.json
+++ b/locales/de.json
@@ -341,7 +341,7 @@
    "This will update Distance settings for ALL tracked Pokémon":"Dadurch werden alle Distanzeinstellungen für ALLE Pokémon aktualisiert.",
    "This will update Distance settings for ALL tracked Quests":"Dadurch wird die Distanz für ALLE getrackten Quests aktualisiert",
    "This will update Distance settings for ALL tracked Raids & Eggs":"Dadurch wird die Distanz für ALLE getrackten Raids & Eier aktualisiert",
-   "To activate cache please perform following actions from your PoracleWeb root folder:":"Um den Cache zu aktivieren, führen Sie bitte die folgenden Aktionen in Ihrem PoracleWeb-Stammordner aus:",
+   "To activate cache please perform following actions from your PoracleWeb root folder":"Um den Cache zu aktivieren, führen Sie bitte die folgenden Aktionen in Ihrem PoracleWeb-Stammordner aus",
    "to display all Pokémon":"um alle Pokémon anzuzeigen",
    "Track PvP League":"Track PvP Ligen",
    "Trackings":"Filter",
