--- a/locales/de.json
+++ b/locales/de.json
@@ -42,6 +42,7 @@
    "Both Areas & Locations are Disabled":"Beides Gebiete & Standorte sind deaktiviert",
    "bug":"Käfer",
    "Buy or Renew a Subscription":"Abo kaufen oder verlängern",
+   "Cache Folder found. Cache Active":"Cache Verzeichnis gefunden & aktiv",
    "CANCEL":"ABBRECHEN",
    "Cancel":"Abbrechen",
    "Cannot Migrate to an existing User":"Migration zu einen vorhanden Benuter ist nicht möglich",
@@ -68,6 +69,7 @@
    "CP":"WP",
    "Create New Profile":"Neues Profil erstellen",
    "Create Profile":"Profil erstellen",
+   "Current PoracleJS Version":"aktuelle PoracleJS Version"
    "Custom Title":"eigener Titel",
    "dark":"Unlicht",
    "DB User":"DB Nutzer",
@@ -152,6 +154,7 @@
    "It looks like your subscription has expired on":"Dein Abo ist anscheinend abgelaufen",
    "IV":"IV",
    "Languages":"Sprachen",
+   "Latest":"Neuste",
    "LEVEL":"LEVEL",
    "Level":"Level",
    "Location deleted successfully":"Standort erfolgreich gelöscht",
@@ -217,6 +220,7 @@
    "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
    "Please Set New Distance":"Bitte setzten deinen neuen Standort",
    "Please set PvP datasource to internal to enable Little Cup":"Bitte setze die PvP-Datenquelle auf intern, um den Little Cup zu aktivieren",
+   "Please Update PoracleJS":"bitte PoracleJS aktualisieren",
    "poison":"Gift",
    "POKÉMON TRACKED":"POKÉMON-EINSTELLUNGEN",
    "POKÉMON":"POKÉMON",
@@ -246,6 +250,7 @@
    "Rename Profile":"Profil umbenennen",
    "RENAME":"UMBENENNEN",
    "Renew":"Erneuern",
+   "Required Version":"benötigte Version",
    "rock":"Gestein",
    "Save changes":"Änderungen speichern",
    "Search":"Suche",
