--- a/locales/de.json
+++ b/locales/de.json
@@ -69,7 +69,7 @@
    "CP":"WP",
    "Create New Profile":"Neues Profil erstellen",
    "Create Profile":"Profil erstellen",
-   "Current PoracleJS Version":"aktuelle PoracleJS Version"
+   "Current PoracleJS Version":"aktuelle PoracleJS Version",
    "Custom Title":"eigener Titel",
    "dark":"Unlicht",
    "DB User":"DB Nutzer",
