--- a/locales/de.json
+++ b/locales/de.json
@@ -97,8 +97,7 @@
    "Delete tracking for Nests":"Lösche Nest-Einstellung",
    "Delete tracking for Raids Level":"Lösche Tracking für Raid-Level",
    "Delete tracking for":"Tracking löschen für",
-   "DELETE":"LÖSCHE",
-   "Delete":"Löschen",
+   "DELETE":"LÖSCHEN",
    "DISCORD CHANNELS LIST":"DISCORD KANAL LISTE",
    "Discord or Telegram ID":"Discord oder Telegram ID",
    "Display Channel ID in Admin Tools":"Kanal ID in Admin Tools anzeigen",
