--- a/locales/de.json
+++ b/locales/de.json
@@ -27,6 +27,7 @@
    "ALL":"ALLE",
    "All":"Alle",
    "Allow 'Admin Disabled' Users":"Benutzer mit 'deaktiviertem Administratorstatus' zulassen",
+   "Already tracked are shown in green":"Bereits getrackte Auswahlen sind grün markiert",
    "An unknown error occurred":"Ein unbekannter Fehler ist aufgetreten",
    "and":"und",
    "AND ALL ASSOCIATED TRACKINGS":"UND ALLE DAMIT VERBUNDENEN EINSTELLUNGEN",
@@ -39,6 +40,7 @@
    "Back to own Account":"Zum eigenen Konto wechseln",
    "Back to":"Zurück zu",
    "before using this tool":"bevor du dieses Seite nutzen kannst.",
+   "Big Magikarps":"große Karpador",
    "Both Areas & Locations are Disabled":"Beides Gebiete & Standorte sind deaktiviert",
    "bug":"Käfer",
    "Buy or Renew a Subscription":"Abo kaufen oder verlängern",
@@ -59,8 +61,10 @@
    "Cleaning Activated":"Bereinigen aktiviert",
    "Cleaning":"Bereinigen",
    "Click 'Logout' below if you are ready to end your current session":"Klicke auf 'Abmelden', um die Session zu beenden",
+   "Click the <i class='fas fa-plus'></i> button to quickly add a tracking":"Klicke den <i class='fas fa-plus'></i> Knopf, um die Auswahl zum Tracking hinzuzufügen",
    "Close":"Schließen",
    "command":"Befehl",
+   "Common Trackings":"häufig Trackings",
    "Configured Distance:":"Eingestellte Distanz:",
    "CONFIRM ACCOUNT MIGRATION":"BESTÄTIGE KONTO MIGRATION",
    "CONFIRM CHANNEL SYNCHRONIZATION":"BESTÄTIGE KANALSYNCHRONISATION",
@@ -170,6 +174,7 @@
    "LURES TRACKED":"LOCKMODUL-EINSTELLUNGEN",
    "Lures":"Lockmodule",
    "LURES":"LOCKMODULE",
+   "Magikarps & Ratatas":"Karpador & Rattfratz",
    "Magnetic Lure":"Magnet",
    "Male":"Männlich",
    "Max Distance":"Distanz Max",
@@ -230,14 +235,18 @@
    "PvP datasource set to internal, Little Cup enabled":"PvP-Datenquelle auf intern eingestellt, der Little Cup ist aktiviert",
    "PvP Great":"Superliga",
    "PvP Great Min CP":"Superliga min WP",
-   "PvP Little Min CP":"Little Cup min WP",
+   "PvP Great Rank 1":"PVP Superliga Rang 1",
+   "PvP Little Min CP":"LittleCup min WP",
+   "PvP Little Rank 1":"PVP LittleCup Rang 1",
    "PvP Max Allowed Rank":"max erlaubter PvP Rang",
    "PvP Settings":"PvP Einstellungen",
    "PvP Ultra":"Hyperliga",
    "PvP Ultra Min CP":"Hyperliga min WP",
+   "PvP Ultra Rank 1":"PVP Hyperliga Rang 1",
    "QUESTS TRACKED":"QUEST-EINSTELLUNGEN",
    "QUESTS":"QUESTS",
    "Quests":"Quests",
+   "Quick Pick":"Schnellauswahl",
    "Raid/Egg":"Raids/Eier",
    "Raids Level":"Raid-Level",
    "RAIDS":"RAIDS",
@@ -345,6 +354,7 @@
    "This will update Distance settings for ALL tracked Pokémon":"Dadurch werden alle Distanzeinstellungen für ALLE Pokémon aktualisiert.",
    "This will update Distance settings for ALL tracked Quests":"Dadurch wird die Distanz für ALLE getrackten Quests aktualisiert",
    "This will update Distance settings for ALL tracked Raids & Eggs":"Dadurch wird die Distanz für ALLE getrackten Raids & Eier aktualisiert",
+   "Tiny Ratatas":"winzige Rattfratz",
    "To activate cache please perform following actions from your PoracleWeb root folder":"Um den Cache zu aktivieren, führen Sie bitte die folgenden Aktionen in Ihrem PoracleWeb-Stammordner aus",
    "to display all Pokémon":"um alle Pokémon anzuzeigen",
    "Track PvP League":"Track PvP Ligen",
