--- a/locales/fr.json
+++ b/locales/fr.json
@@ -421,6 +421,7 @@
     "Big Magikarps":"Gros Magicarpes",
     "Tiny Ratatas":"Petits Ratatas",
     "100% IV Pokemon":"Pokemon 100% IV",
+    "0% IV Pokemon":"Pokemon 0% IV",
     "PvP Little Rank 1":"Ligue Little Rank 1",
     "PvP Great Rank 1":"Ligue Super Rank 1",
     "PvP Ultra Rank 1":"Ligue Ultra Rank 1",
