--- a/locales/de.json
+++ b/locales/de.json
@@ -262,6 +262,7 @@
    "rock":"Gestein",
    "Save changes":"Änderungen speichern",
    "Search":"Suche",
+   "Select Candy Rewards you want to add":"Wähle Bonbon Belohungen um diese hinzu zu fügen",
    "Select Egg Levels you want to add":"Wähle Ei-Level aus, die du hinzufügen willst",
    "Select Energy Rewards you want to add":"Wähle Energie Belohungen um diese hinzu zu fügen",
    "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon, die du hinzufügen willst",
