--- a/locales/fr.json
+++ b/locales/fr.json
@@ -436,5 +436,6 @@
     "Select multiple options":"Sélectionnez les options souhaitées",
     "Select Max 1 option":"Sélectionnez Max 1 option",
     "Sorry Nothing to Show":"Désolé, aucun résultat",
-    "Role Management":"Gestion des Roles"
+    "Role Management":"Gestion des Roles",
+    "Enable Roles":"Activer les Roles"
 }
