--- a/locales/fr.json
+++ b/locales/fr.json
@@ -440,5 +440,6 @@
     "Enable Roles":"Activer les Roles",
     "Alert on Battle Changes":"Alerte en cas d'attaque",
     "Slots Changes":"Changement # Places",
-    "Battle Changes":"Attaque en cours"
+    "Battle Changes":"Attaque en cours",
+    "All Raids":"Tous les Raids"
 }
