--- a/locales/de.json
+++ b/locales/de.json
@@ -412,5 +412,6 @@
    "Your Location is set to":"Dein Standort:",
    "Your subscription is still valid until":"Dein Abo ist noch gültig bis",
    "Slots Changes":"Platzänderung",
-   "Battle Changes":"Angriffsmeldungen"
+   "Battle Changes":"Angriffsmeldungen",
+   "All Raids":"alle Raids"
 }
