--- a/locales/fr.json
+++ b/locales/fr.json
@@ -441,5 +441,6 @@
     "Alert on Battle Changes":"Alerte en cas d'attaque",
     "Slots Changes":"Changement # Places",
     "Battle Changes":"Attaque en cours",
-    "All Raids":"Tous les Raids"
+    "All Raids":"Tous les Raids",
+    "All Eggs":"Tous les Oeufs"
 }
