--- a/locales/de.json
+++ b/locales/de.json
@@ -413,5 +413,6 @@
    "Your subscription is still valid until":"Dein Abo ist noch gültig bis",
    "Slots Changes":"Platzänderung",
    "Battle Changes":"Angriffsmeldungen",
-   "All Raids":"alle Raids"
+   "All Raids":"alle Raids",
+   "All Eggs":"alle Eier"
 }
