Add Search on pokemon Trackings

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -442,5 +442,6 @@
     "Slots Changes":"Changement # Places",
     "Battle Changes":"Attaque en cours",
     "All Raids":"Tous les Raids",
-    "All Eggs":"Tous les Oeufs"
+    "All Eggs":"Tous les Oeufs",
+    "Search - Leave empty for ALL":"Rechercher - Laisser vide pour TOUS"
 }
