Add Locales for Types

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -443,5 +443,23 @@
     "Battle Changes":"Attaque en cours",
     "All Raids":"Tous les Raids",
     "All Eggs":"Tous les Oeufs",
-    "Search - Leave empty for ALL":"Rechercher - Laisser vide pour TOUS"
+    "Search - Leave empty for ALL":"Rechercher - Laisser vide pour TOUS",
+    "Normal":"Normal",
+    "Fire":"Feu",
+    "Water":"Eau",
+    "Grass":"Plante",
+    "Electric":"Électrik",
+    "Ice":"Glace",
+    "Fighting":"Combat",
+    "Poison":"Poison",
+    "Ground":"Sol",
+    "Flying":"Vol",
+    "Psychic":"Psy",
+    "Bug":"Insecte",
+    "Rock":"Roche",
+    "Ghost":"Spectre",
+    "Dark":"Ténèbres",
+    "Dragon":"Dragon",
+    "Steel":"Acier",
+    "Fairy":"Fée"
 }
