Update Search Field

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -443,7 +443,8 @@
     "Battle Changes":"Attaque en cours",
     "All Raids":"Tous les Raids",
     "All Eggs":"Tous les Oeufs",
-    "Search - Leave empty for ALL":"Rechercher - Laisser vide pour TOUS",
+    "Search by name, type or ID":"Rechercher par nom, type ou ID",
+    "Search by name or type":"Rechercher par nom ou type",
     "Normal":"Normal",
     "Fire":"Feu",
     "Water":"Eau",
