Add Support for Size

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -462,5 +462,6 @@
     "Dark":"Ténèbres",
     "Dragon":"Dragon",
     "Steel":"Acier",
-    "Fairy":"Fée"
+    "Fairy":"Fée",
+    "SIZE":"TAILLE"
 }
