--- a/locales/de.json
+++ b/locales/de.json
@@ -414,5 +414,7 @@
    "Slots Changes":"Platzänderung",
    "Battle Changes":"Angriffsmeldungen",
    "All Raids":"alle Raids",
-   "All Eggs":"alle Eier"
+   "All Eggs":"alle Eier",
+   "SIZE":"GRÖßE",
+   "Size":"Größe"
 }
