Correct NL Translation

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -23,7 +23,7 @@
     "POKÉMON":"POKÉMON",
     "POKÉMON TRACKED":"GEVOLGDE POKEMON",
     "EGGS & RAIDS TRACKED":"GEVOLGDE RAIDS & EIEREN",
-    "QUESTS TRACKED":"GEVOLGENDE QUESTS",
+    "QUESTS TRACKED":"GEVOLGDE QUESTS",
     "QUESTS":"QUESTS",
     "RAIDS":"RAIDS",
     "Raids":"Raids",
