Add New FR Locales

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -463,5 +463,7 @@
     "Dragon":"Dragon",
     "Steel":"Acier",
     "Fairy":"Fée",
-    "SIZE":"TAILLE"
+    "SIZE":"TAILLE",
+    "Gym":"Arène",
+    "TRACK FOR ALL GYMS":"TOUTES LES ARENES"
 }
