--- a/locales/de.json
+++ b/locales/de.json
@@ -416,5 +416,7 @@
    "All Raids":"alle Raids",
    "All Eggs":"alle Eier",
    "SIZE":"GRÖßE",
-   "Size":"Größe"
+   "Size":"Größe",
+   "Gym":"Arena",
+   "TRACK FOR ALL GYMS":"alle Arenen"
 }
