--- a/locales/de.json
+++ b/locales/de.json
@@ -140,6 +140,7 @@
    "Get Raid Bosses from":"hole Raidbosse von:",
    "ghost":"Geist",
    "Glacial Lure":"Gletscher",
+   "gold-stop":"Gold-Stop",
    "grass":"Pflanze",
    "Great":"Super",
    "GREAT":"SUPER",
@@ -229,6 +230,7 @@
    "poison":"Gift",
    "POKÉMON TRACKED":"POKÉMON-EINSTELLUNGEN",
    "POKÉMON":"POKÉMON",
+   "pokemon-contest":"Pokemon-Wettbewerb",
    "Pokemons Currently available on Map":"Aus den heute gescannten Quests",
    "Profile":"Profil",
    "Profiles":"Profile",
