--- a/locales/de.json
+++ b/locales/de.json
@@ -284,6 +284,7 @@
    "Some of your alarms contains both IV and PvP Filters":"Manche deiner Einstellungen beinhalten IV und PVP Filter",
    "Some of your alarms contains both PvP Great and PvP Ultra Filters":"Manche deiner Einstellungen beinhalten Super- und Hyperliga PVP Filter",
    "Sorry Migration From Telegram to Discord is not available yet":"Eine Migration von Telegram zu Discord ist aktuell nicht möglich",
+   "Sparkly Lure":"Funkel",
    "Spawns/Hour":"Spawns/Stunde",
    "Start account migration by":"Starte die Kontomigration von",
    "STATS":"STATS",
