--- a/locales/fr.json
+++ b/locales/fr.json
@@ -259,6 +259,7 @@
     "Mossy Lure":"Type Moussu",
     "Magnetic Lure":"Type Magnetic",
     "Rainy Lure":"Type Pluvieux",
+    "Sparkly Lure":"Type Doré",
     "Delete tracking for Lures":"Supprimer le suivi des Leurres",
     "This will delete tracking for Lure":"Cette action supprimera le suivi des Leurres",
     "Update Distance for all tracked Lures?":"Modifier la Distance pour tous les Leurres suivis?",
