--- a/locales/fr.json
+++ b/locales/fr.json
@@ -466,5 +466,22 @@
     "Fairy":"Fée",
     "SIZE":"TAILLE",
     "Gym":"Arène",
-    "TRACK FOR ALL GYMS":"TOUTES LES ARENES"
+    "TRACK FOR ALL GYMS":"TOUTES LES ARENES",
+    "Level 1":"Niveau 1",
+    "Level 2":"Niveau 4",
+    "Level 3":"Niveau 5",
+    "Level 4":"Niveau 6",
+    "Legendary":"Légendaire",
+    "Mega":"Mega",
+    "Mega Legendary":"Mega Légendaires",
+    "Ultra Beast":"Ultra Chimères",
+    "Elite":"Elite",
+    "Primal":"Primal",
+    "Level 1 Shadow":"Obscurs Niveau 1 ",
+    "Level 2 Shadow":"Obscurs Niveau 2",
+    "Level 3 Shadow":"Obscurs Niveau 3",
+    "Level 4 Shadow":"Obscurs Niveau 4",
+    "Shadow Legendary":"Obscurs Légendaires"
+
+
 }
