--- a/locales/fr.json
+++ b/locales/fr.json
@@ -471,7 +471,7 @@
     "Level 2":"Niveau 2",
     "Level 3":"Niveau 3",
     "Level 4":"Niveau 4",
-    "Legendary":"Légendaire",
+    "Legendary":"Légendaires",
     "Mega":"Mega",
     "Mega Legendary":"Mega Légendaires",
     "Ultra Beast":"Ultra Chimères",
