--- a/locales/de.json
+++ b/locales/de.json
@@ -421,5 +421,20 @@
    "SIZE":"GRÖßE",
    "Size":"Größe",
    "Gym":"Arena",
-   "TRACK FOR ALL GYMS":"alle Arenen"
+   "TRACK FOR ALL GYMS":"alle Arenen",
+    "Level 1":"Level 1",
+    "Level 2":"Level 2",
+    "Level 3":"Level 3",
+    "Level 4":"Level 4",
+    "Legendary":"Legendärer",
+    "Mega":"Mega",
+    "Mega Legendary":"Mega Legendärer",
+    "Ultra Beast":"Ultrabestien",
+    "Elite":"Top",
+    "Primal":"Proto",
+    "Level 1 Shadow":"Crypto Level 1",
+    "Level 2 Shadow":"Crypto Level 2",
+    "Level 3 Shadow":"Crypto Level 3",
+    "Level 4 Shadow":"Crypto Level 4",
+    "Shadow Legendary":"Crypto Legendärer"
 }
