--- a/locales/de.json
+++ b/locales/de.json
@@ -426,15 +426,15 @@
     "Level 2":"Level 2",
     "Level 3":"Level 3",
     "Level 4":"Level 4",
-    "Legendary":"Legendärer",
+    "Legendary":"Legendär",
     "Mega":"Mega",
-    "Mega Legendary":"Mega Legendärer",
-    "Ultra Beast":"Ultrabestien",
+    "Mega Legendary":"Mega Legendär",
+    "Ultra Beast":"Ultrabestie",
     "Elite":"Top",
     "Primal":"Proto",
     "Level 1 Shadow":"Crypto Level 1",
     "Level 2 Shadow":"Crypto Level 2",
     "Level 3 Shadow":"Crypto Level 3",
     "Level 4 Shadow":"Crypto Level 4",
-    "Shadow Legendary":"Crypto Legendärer"
+    "Shadow Legendary":"Crypto Legendär"
 }
