--- a/locales/de.json
+++ b/locales/de.json
@@ -183,6 +183,7 @@
    "MAX Rank":"Ranking Max",
    "MAX STATS":"HÖCHSTENS",
    "Mega Energy":"Mega Energie",
+   "metal":"Stahl",
    "meters around your position":"Meter um deine Position",
    "meters":"Meter",
    "Migrate Your Account":"Migriere dein Konto",
