--- a/locales/de.json
+++ b/locales/de.json
@@ -231,7 +231,7 @@
    "poison":"Gift",
    "POKÉMON TRACKED":"POKÉMON-EINSTELLUNGEN",
    "POKÉMON":"POKÉMON",
-   "pokemon-contest":"Pokemon-Showcase",
+   "showcase":"Pokemon-Showcase",
    "Pokemons Currently available on Map":"Aus den heute gescannten Quests",
    "Profile":"Profil",
    "Profiles":"Profile",
