--- a/locales/fr.json
+++ b/locales/fr.json
@@ -481,7 +481,6 @@
     "Level 2 Shadow":"Obscurs Niveau 2",
     "Level 3 Shadow":"Obscurs Niveau 3",
     "Level 4 Shadow":"Obscurs Niveau 4",
-    "Shadow Legendary":"Obscurs Légendaires"
-
-
+    "Shadow Legendary":"Obscurs Légendaires",
+    "showcase":"Epreuve Pokemon"
 }
