--- a/locales/fr.json
+++ b/locales/fr.json
@@ -482,5 +482,5 @@
     "Level 3 Shadow":"Obscurs Niveau 3",
     "Level 4 Shadow":"Obscurs Niveau 4",
     "Shadow Legendary":"Obscurs Légendaires",
-    "showcase":"Epreuve Pokemon"
+    "showcase":"Epreuve"
 }
